u: 좌측 레이아웃 내부 적용 (nav menu, 로그아웃 버튼)

--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -23,7 +23,7 @@
   height: 100dvh;
   display: flex;
   flex-direction: column;
-  background-color: orange;
+  /* background-color: orange; */
 }
 
 .leftSectionFixed nav {
